--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,12 +38,12 @@ dependencies:
   dart_console: ^0.5.0
   tuple: ^1.0.3
   bottom_navy_bar: ^5.3.2
-  bloc_pattern: ^2.5.1
+#  bloc_pattern: ^2.5.1
   intro_slider: ^2.2.8
   font_awesome_flutter: ^8.5.0
   local_auth: ^0.6.1
   cached_network_image: ^2.0.0
-  rxdart: ^0.23.1
+  rxdart: ^0.22.1
   package_info: ^0.4.0+13
   path_provider: ^1.6.0
   dio: ^3.0.8
@@ -63,6 +63,11 @@ dependencies:
   pref_dessert: ^0.5.1
   sqflite: ^1.2.0
   flutter_image_compress: ^0.6.5+1
+  flare_splash_screen: ^2.0.1+2
+  flutter_material_color_picker: ^1.0.5
+  flutter_bloc: ^2.1.1
+  flutter_statusbarcolor: any
+  shimmer: ^1.0.0
 
 
 
@@ -81,10 +86,10 @@ dev_dependencies:
 flutter:
   assets:
     - assets/images/
-  fonts:
-    - family: DancingScript
-      fonts:
-        - asset: assets/fonts/
+#  fonts:
+#    - family: DancingScript
+#      fonts:
+#        - asset: assets/fonts/
 #      family: Trajan Pro
 #      fonts:
 #       - asset: fonts/TrajanPro.ttf
