--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,10 @@ dependencies:
   flutter_bloc: ^2.1.1
   flutter_statusbarcolor: any
   shimmer: ^1.0.0
+  firebase_core: ^0.4.3+3
+  cloud_firestore: ^0.13.2+1
+  firebase_auth: ^0.15.4
+  provider: ^3.2.0
 
 
 
