--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -69,6 +69,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.2.0'
     implementation 'com.google.firebase:firebase-firestore:21.4.0'
     implementation 'com.android.support:multidex:1.0.3'
-    implementation 'com.google.firebase:firebase-admin:6.12.1'
+//    implementation 'com.google.firebase:firebase-admin:6.12.1'
 }
 apply plugin: 'com.google.gms.google-services'
