--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,8 @@ dependencies:
   cloud_firestore: ^0.13.2+1
   firebase_auth: ^0.15.4
   provider: ^3.2.0
+  dependency_validator: ^1.4.2
+  fancy_alert_dialog: ^0.0.1
 
 
 
