--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,21 +26,15 @@ dependencies:
   url_launcher: ^5.4.1
   material_design_icons_flutter: 3.4.4895
   webview_flutter: ^0.3.19+5
-  neumorphic: ^0.0.2+1
   flutter_offline: ^0.3.0
-  fl_chart: ^0.8.0
   recase: ^2.0.1
-  ansicolor: ^1.0.2
   http: ^0.12.0+2
   path: ^1.6.2
 #  yaml: ^2.1.16
   args: ^1.5.2
   dart_console: ^0.5.0
   tuple: ^1.0.3
-  bottom_navy_bar: ^5.3.2
 #  bloc_pattern: ^2.5.1
-  intro_slider: ^2.2.8
-  font_awesome_flutter: ^8.5.0
   local_auth: ^0.6.1
   cached_network_image: ^2.0.0
   rxdart: ^0.23.1
@@ -50,8 +44,6 @@ dependencies:
   soft_ui: ^0.0.1+1
   drawing_animation: ^0.1.3
   google_fonts: ^0.3.9
-  circle_wheel_scroll: ^0.0.1+1
-  curved_navigation_bar: ^0.1.2 #latest version
   bezier: ^1.1.5
   flutter_cache_manager: ^1.1.3
   dio_http_cache: ^0.2.5
@@ -61,24 +53,20 @@ dependencies:
   shared_preferences: ^0.5.6+1
   shared_preferences_platform_interface: ^1.0.1
   pref_dessert: ^0.5.1
-  sqflite: ^1.2.0
   flutter_image_compress: ^0.6.5+1
-  flare_splash_screen: ^2.0.1+2
   flutter_material_color_picker: ^1.0.5
   flutter_bloc: ^3.2.0
   flutter_statusbarcolor: any
-  shimmer: ^1.0.0
   firebase_core: ^0.4.3+3
   cloud_firestore: ^0.13.2+1
   firebase_auth: ^0.15.4
   provider: ^4.0.4
   dependency_validator: ^1.4.2
-  fancy_alert_dialog: ^0.0.1
   feature_discovery: ^0.8.0
-  wave: ^0.0.8
   flutter_swiper: ^1.1.6
-  syncfusion_flutter_charts: ^17.4.51
-  vibration: ^1.2.4
+  splashscreen: ^1.2.0
+  awesome_loader: ^0.0.3
+  pie_chart: ^3.1.1
 
 
 
