--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,9 @@ dependencies:
   awesome_loader: ^0.0.3
   pie_chart: ^3.1.1
   showcaseview: ^0.1.2
+  shimmer: ^1.1.1
+  confetti: ^0.4.0
+  device_preview: ^0.4.4
 
 
 
