--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,13 +50,9 @@ dependencies:
   cache_image: ^1.0.5
 #  dio_cache: ^0.4.0-beta
   extended_image: ^0.7.1
-  shared_preferences: ^0.5.6+1
-  shared_preferences_platform_interface: ^1.0.1
-  pref_dessert: ^0.5.1
-  flutter_image_compress: ^0.6.5+1
+  shared_preferences: ^0.5.7
   flutter_material_color_picker: ^1.0.5
   flutter_bloc: ^3.2.0
-  flutter_statusbarcolor: any
   firebase_core: ^0.4.3+3
   cloud_firestore: ^0.13.2+1
   firebase_auth: ^0.15.4
@@ -72,6 +68,7 @@ dependencies:
   confetti: ^0.4.0
   device_preview: ^0.4.4
   firebase_crashlytics: ^0.1.3
+  fluttertoast: ^4.0.0
 
 
 
