--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,16 @@ dependencies:
   confetti: ^0.4.0
   firebase_crashlytics: ^0.1.3
   firebase_analytics: ^5.0.11
+  flutter_launcher_icons: ^0.7.5
+  flutter_launcher_name: ^0.0.1
+
+flutter_launcher_name:
+  name: "Secondary Sch ALMANAC Template"
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/ic_launcher.png"
 
 
 dev_dependencies:
