--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_launcher_name: ^0.0.1
   device_preview: ^0.4.5
   toast: ^0.1.5
+  characters: ^1.0.0
 
 flutter_native_splash:
   image: assets/images/david.png
