--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,17 +29,18 @@ dependencies:
   cached_network_image: ^2.0.0
   google_fonts: ^0.3.9
   shared_preferences: ^0.5.7
-  flutter_bloc: ^3.2.0
-  firebase_core: 0.4.4
-  cloud_firestore: ^0.13.2+1
-  firebase_auth: 0.15.4
-  provider: ^4.0.4
+  bloc: ^6.1.1
+  flutter_bloc: ^6.1.1
+  firebase_core: 0.5.3
+  cloud_firestore: 0.14.4
+  firebase_auth: ^0.18.4+1
+  provider: 4.3.2+3
   flutter_swiper: ^1.1.6
   pie_chart: ^3.1.1
   shimmer: ^1.1.1
   confetti: ^0.4.0
-  firebase_crashlytics: ^0.1.3
-  firebase_analytics: ^5.0.11
+  firebase_crashlytics: ^0.2.4
+  firebase_analytics: ^6.3.0
   flutter_launcher_icons: ^0.7.5
   flutter_launcher_name: ^0.0.1
   device_preview: ^0.4.5
@@ -66,8 +67,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-dependency_overrides:
-  firebase_core: 0.4.4
+#dependency_overrides:
+#  firebase_core: 0.5.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -82,7 +83,7 @@ flutter:
 #        - asset: assets/fonts/
 #      family: Trajan Pro
 #      fonts:
-#       - asset: fonts/TrajanPro.ttf
+#       cd- asset: fonts/TrajanPro.ttf
 #     - asset: fonts/TrajanPro_Bold.ttf
 #       weight: 700
 
