--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,16 +59,17 @@ flutter_native_splash:
 
 
 flutter_app_name:
-  name: "NG Secondary Sch ALMANAC Template"
+#  name: "NG Secondary Sch ALMANAC Template"
+  name: "NG Sec Sch"
 
 flutter_icons:
   android: true
   ios: true
-  image_path: "assets/images/barrs_hill_sec_logo.jpeg"
+  image_path: "assets/images/ng_sec_icon.jpg"
 
 
 dev_dependencies:
-  flutter_native_splash: ^1.2.3
+  flutter_native_splash: ^2.1.0
   flutter_test:
     sdk: flutter
 
